[gd_scene load_steps=3 format=3 uid="uid://cx61ecks3i4cg"]

[ext_resource type="Script" path="res://UI.gd" id="1_4tl7a"]
[ext_resource type="Texture2D" uid="uid://b324bh312gk5r" path="res://art/Extraterrestrial Pixel Art Background.png" id="2_niwq3"]

[node name="UI" type="Control"]
layout_mode = 3
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tl7a")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -114.2
offset_top = -66.8
offset_right = 1037.8
offset_bottom = 579.2
texture = ExtResource("2_niwq3")
expand_mode = 1

[node name="configurationPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_top = 0.413
anchor_right = 0.23
anchor_bottom = 0.563
offset_left = -9.824
offset_top = -9.09922
offset_right = 244.032
offset_bottom = 9.14077
grow_horizontal = 2
grow_vertical = 2

[node name="configurationHbox" type="HBoxContainer" parent="configurationPanel"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 93.0

[node name="amountSpinnerContainer" type="VBoxContainer" parent="configurationPanel/configurationHbox"]
layout_mode = 2
alignment = 1

[node name="up" type="Button" parent="configurationPanel/configurationHbox/amountSpinnerContainer"]
layout_mode = 2
text = "↑"

[node name="diceAmountDisplay" type="Label" parent="configurationPanel/configurationHbox/amountSpinnerContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="down" type="Button" parent="configurationPanel/configurationHbox/amountSpinnerContainer"]
layout_mode = 2
text = "↓"

[node name="diceSpinnerContainer" type="VBoxContainer" parent="configurationPanel/configurationHbox"]
layout_mode = 2
alignment = 1

[node name="up" type="Button" parent="configurationPanel/configurationHbox/diceSpinnerContainer"]
layout_mode = 2
text = "↑"

[node name="diceCategoryDisplay" type="Label" parent="configurationPanel/configurationHbox/diceSpinnerContainer"]
layout_mode = 2
text = "d4"
horizontal_alignment = 1

[node name="down" type="Button" parent="configurationPanel/configurationHbox/diceSpinnerContainer"]
layout_mode = 2
text = "↓"

[node name="diceImagesContainer" type="HBoxContainer" parent="configurationPanel"]
layout_mode = 2
offset_left = 76.0
offset_top = 35.0
offset_right = 426.0
offset_bottom = 67.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_bottom = 125.0
grow_horizontal = 0
grow_vertical = 2

[connection signal="pressed" from="configurationPanel/configurationHbox/amountSpinnerContainer/up" to="." method="_amount_up"]
[connection signal="pressed" from="configurationPanel/configurationHbox/amountSpinnerContainer/down" to="." method="_amount_down"]
[connection signal="pressed" from="configurationPanel/configurationHbox/diceSpinnerContainer/up" to="." method="_dice_up"]
[connection signal="pressed" from="configurationPanel/configurationHbox/diceSpinnerContainer/down" to="." method="_dice_down"]
